settings in the hql of my tasks